--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,17 @@
+.holder{
+	display:flex;
+	background-color:cyan;
+	justify-content:center;
+	 flex-wrap: wrap;
+	
+}
+.holder>div{
+	background-color:white;
+	width:50px;
+	height:50px;
+	text-align:center;
+	margin: 10px;
+  padding: 20px;
+}
 
 /* Your CSS Code here. */
